--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -36,7 +36,7 @@ jobs:
       shell: bash
       run: |
         docker exec -i garnet bash -c "apt update"
-        docker exec -i garnet bash -c "apt install default-jre"
+        docker exec -i garnet bash -c "apt install -y default-jre"
         docker exec -i garnet bash -c "pip install -r /garnet/requirements.txt"
         docker exec -i garnet bash -c "pip install coveralls"
         docker exec -i garnet bash -c "pip install pytest"
