--- a/mflowgen/full_chip/global_controller/configure.yml
+++ b/mflowgen/full_chip/global_controller/configure.yml
@@ -8,6 +8,7 @@ inputs:
 
 outputs:
   - global_controller_tt.lib
+  - global_controller_tt.db
   - global_controller.lef
   - global_controller.gds
   - global_controller.vcs.v
@@ -16,6 +17,7 @@ outputs:
 
 postconditions:
   - assert File( 'outputs/global_controller_tt.lib' ) # must exist
+  - assert File( 'outputs/global_controller_tt.db' ) # must exist
   - assert File( 'outputs/global_controller.lef' ) # must exist
   - assert File( 'outputs/global_controller.gds' ) # must exist
   - assert File( 'outputs/global_controller.vcs.v' ) # must exist
