--- a/mflowgen/tile_array/Tile_MemCore/configure.yml
+++ b/mflowgen/tile_array/Tile_MemCore/configure.yml
@@ -8,6 +8,7 @@ inputs:
 
 outputs:
   - Tile_MemCore_tt.lib
+  - Tile_MemCore_tt.db
   - Tile_MemCore.lef
   - Tile_MemCore.gds
   - Tile_MemCore.vcs.v
@@ -23,6 +24,7 @@ outputs:
 
 postconditions:
   - assert File( 'outputs/Tile_MemCore_tt.lib' ) # must exist
+  - assert File( 'outputs/Tile_MemCore_tt.db' ) # must exist
   - assert File( 'outputs/Tile_MemCore.lef' ) # must exist
   - assert File( 'outputs/Tile_MemCore.gds' ) # must exist
   - assert File( 'outputs/Tile_MemCore.vcs.v' ) # must exist
