--- a/mflowgen/glb_top/custom-init/configure.yml
+++ b/mflowgen/glb_top/custom-init/configure.yml
@@ -9,7 +9,7 @@ name: custom-init
 #-------------------------------------------------------------------------
 parameters:
   num_glb_tiles: 16
-  num_tile_array_cols: 32
+  array_width: 32
 
 #-------------------------------------------------------------------------
 # Inputs and Outputs
