--- a/mflowgen/common/rtl/configure.yml
+++ b/mflowgen/common/rtl/configure.yml
@@ -13,6 +13,7 @@ parameters:
   num_glb_tiles: 2
   pipeline_config_interval: 8
   interconnect_only: False
+  glb_only: False
   soc_only: False
   PWR_AWARE: True
 
