--- a/mflowgen/glb_top/glb_tile/configure.yml
+++ b/mflowgen/glb_top/glb_tile/configure.yml
@@ -14,6 +14,7 @@ outputs:
   - glb_tile.gds
   - glb_tile.lvs.v
   - glb_tile.vcs.v
+  - glb_tile.vcs.pg.v
   - glb_tile.sdf
   - glb_tile_sram.spi
   - glb_tile_sram.v
@@ -29,6 +30,7 @@ postconditions:
   - assert File( 'outputs/glb_tile.gds' ) # must exist
   - assert File( 'outputs/glb_tile.lvs.v' ) # must exist
   - assert File( 'outputs/glb_tile.vcs.v' ) # must exist
+  - assert File( 'outputs/glb_tile.vcs.pg.v' ) # must exist
   - assert File( 'outputs/glb_tile.sdf' ) # must exist
   - assert File( 'outputs/glb_tile_sram.spi' ) # must exist
   - assert File( 'outputs/glb_tile_sram.v' ) # must exist
