GLS and ptpx flow for GLB is done

--- a/mflowgen/glb_top/glb_tile/configure.yml
+++ b/mflowgen/glb_top/glb_tile/configure.yml
@@ -22,6 +22,7 @@ outputs:
   - glb_tile_sram_tt.lib
   - glb_tile_sram_ff.lib
   - glb_tile_sram_tt.db
+  - glb_tile.spef.gz
 
 postconditions:
   - assert File( 'outputs/glb_tile_tt.lib' ) # must exist
@@ -38,3 +39,4 @@ postconditions:
   - assert File( 'outputs/glb_tile_sram_tt.lib' ) # must exist
   - assert File( 'outputs/glb_tile_sram_ff.lib' ) # must exist
   - assert File( 'outputs/glb_tile_sram_tt.db' ) # must exist
+  - assert File( 'outputs/glb_tile.spef.gz' ) # must exist
