--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -30,8 +30,8 @@ RUNTIME_ARGS += +TEST_PCFG_STREAM
 
 HEADER_FILES ?= header/global_buffer_param.svh header/glb.svh 
 DESIGN_FILES ?= global_buffer.sv systemRDL/output/glb_pio.sv systemRDL/output/glb_jrdl_decode.sv systemRDL/output/glb_jrdl_logic.sv
-NETLIST_FILES ?= gls/glb.vcs.v gls/glb_tile.vcs.v gls/glb_tile_sram.v gls/stdcells.v gls/stdcells-pm.v
 #FIXME: pm cells should be removed!
+NETLIST_FILES ?= gls/glb.vcs.v gls/glb_tile.vcs.v gls/glb_tile_sram.v gls/stdcells.v gls/stdcells-pm.v
 TB_FILES ?= -F sim/tb_global_buffer.f 
 
 # -------------------------------------------------------------------
@@ -84,7 +84,7 @@ VCS = vcs \
 	  $(INPUT_ARGS)
 
 GEN_SDF_CMD = python gls/gen_sdf_cmd.py \
-              -f $(SDF_CMD_FILE) -n $(NUM_GLB_TILES) --top $(GLB_TOP_SDF) --tile $(GLB_TILE_SDF) -l $(SDF_LOG) -t $(MTM)
+              -f $(SDF_CMD_FILE) -n $(NUM_GLB_TILES) --top $(GLB_TOP_SDF) --tile $(GLB_TILE_SDF) -l $(SDF_LOG) -t $(MTM) --tool $(TOOL)
 
 # -------------------------------------------------------------------
 # RTL
@@ -105,11 +105,13 @@ COMPILE_GLS_ARGS += +define+CLK_PERIOD=$(CLK_PERIOD)
 ifeq ($(TOOL), XCELIUM)
     COMPILE = $(XRUN)
     COMPILE_RTL_ARGS += -xminitialize 0 -xminit_log init.log -nospecify
+    COMPILE_GLS_ARGS += -xminitialize 0 -xminit_log init.log
+    COMPILE_GLS_ARGS += -ALLOWREDEFINITION
     RUN = xrun -R -l xrun_run.log
 else ifeq ($(TOOL), VCS)
     COMPILE = $(VCS)
     COMPILE_RTL_ARGS += +nospecify
-    RUN = ./simv
+    RUN = ./simv -lca -l vcs_run.log
 else
     @echo "TOOL must be either XCELIUM or VCS"
 endif
@@ -121,9 +123,15 @@ else ifeq ($(TOOL), VCS)
 endif
 
 ifneq ($(SDF), 0)
-    SDF_ARGS += -sdf_cmd_file $(SDF_CMD_FILE)
-    SDF_ARGS += -sdfstats sdf_stats.txt -sdf_verbose
-    COMPILE_GLS_ARGS += $(SDF_ARGS)
+    ifeq ($(TOOL), XCELIUM)
+        SDF_ARGS += -sdf_cmd_file $(SDF_CMD_FILE)
+        SDF_ARGS += -sdfstats sdf_stats.txt -sdf_verbose
+        COMPILE_GLS_ARGS += $(SDF_ARGS)
+    else ifeq ($(TOOL), VCS)
+        SDF_ARGS += $(shell cat $(SDF_CMD_FILE))
+        SDF_ARGS += +sdfverbose
+        COMPILE_GLS_ARGS += $(SDF_ARGS)
+    endif
 endif
 
 .PHONY: compile
@@ -150,8 +158,6 @@ compile-gls: COMPILE_GLS_ARGS += +define+TSMC_CM_UNIT_DELAY
 compile-gls: COMPILE_GLS_ARGS += +define+TSMC_INITIALIZE_MEM_USING_DEFAULT_TASKS
 compile-gls: COMPILE_GLS_ARGS += +define+TSMC_MEM_LOAD_0
 compile-gls: COMPILE_GLS_ARGS += -negdelay
-compile-gls: COMPILE_GLS_ARGS += -ALLOWREDEFINITION
-compile-gls: COMPILE_GLS_ARGS += -xminitialize 0 -xminit_log init.log
 compile-gls: COMPILE_ARGS = $(COMPILE_GLS_ARGS)
 compile-gls: INPUT_ARGS = $(HEADER_FILES) $(NETLIST_FILES) $(TB_FILES)
 compile-gls:
