--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -24,7 +24,7 @@ GLB_TOP_SDF ?= gls/glb.sdf
 GLB_TILE_SDF ?= gls/glb_tile.sdf
 
 # RUN_ARGS ?= +test1 +test2 +test3 +test4 +test5 +test6
-RUN_ARGS ?= +test3
+RUN_ARGS ?= +test1
 RUN_ARGS += +MAX_NUM_TEST=10
 RUN_ARGS += +DEBUG
 
@@ -56,6 +56,7 @@ XRUN = xrun \
 	   -64bit \
 	   -sv \
 	   -sysv \
+	   -superlint \
 	   -l xrun.log \
 	   -debug \
 	   +access+rwc \
