Optimize chaining of glb

--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -23,8 +23,7 @@ SDF_LOG ?= sdf_logs
 GLB_TOP_SDF ?= gls/glb.sdf
 GLB_TILE_SDF ?= gls/glb_tile.sdf
 
-# RUN_ARGS ?= +test1 +test2 +test3 +test4 +test5 +test6
-RUN_ARGS ?= +test1
+RUN_ARGS ?= +test1 +test2 +test3 +test4 +test5 +test6 +test7 +test8
 RUN_ARGS += +MAX_NUM_TEST=10
 RUN_ARGS += +DEBUG
 
