--- a/mflowgen/glb_top/sim-run/configure.yml
+++ b/mflowgen/glb_top/sim-run/configure.yml
@@ -3,7 +3,7 @@ name: sim-run
 parameters:
   waveform: False
   tool: "XCELIUM"
-  rtl_testvectors: ["test1", "test2", "test3", "test4"]
+  rtl_testvectors: ["test1", "test2", "test3", "test4", "test5", "test6", "test7", "test8", "test9"]
 
 commands:
   - bash run_sim.sh
