--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 coreir>=2.0.123  # should be first so we get the latest version
--e git://github.com/StanfordAHA/gemstone.git#egg=gemstone
+-e git+https://github.com/StanfordAHA/gemstone.git#egg=gemstone
 -e git://github.com/StanfordAHA/canal.git#egg=canal
 -e git://github.com/phanrahan/peak.git#egg=peak
 -e git://github.com/StanfordAHA/lassen.git#egg=lassen
