--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ coreir>=2.0.123  # should be first so we get the latest version
 -e git+https://github.com/StanfordAHA/lassen.git#egg=lassen
 -e git+https://github.com/Kuree/karst.git#egg=karst
 -e git+https://github.com/joyliu37/BufferMapping#egg=buffer_mapping
--e git+git://github.com/pyhdi/pyverilog.git#egg=pyverilog
+-e git+https://github.com/pyhdi/pyverilog.git#egg=pyverilog
 -e git+https://github.com/StanfordAHA/lake#egg=lake-aha
 -e git+https://github.com/phanrahan/magma.git#egg=magma-lang
 -e git+https://github.com/phanrahan/mantle.git#egg=mantle
@@ -13,6 +13,6 @@ ordered_set
 cosa
 -e git+https://github.com/leonardt/fault.git#egg=fault
 hwtypes
--e git+git://github.com/Kuree/archipelago.git#egg=archipelago
+-e git+https://github.com/Kuree/archipelago.git#egg=archipelago
 systemrdl-compiler
 peakrdl-html
